kafka-cluster/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-metrics
  namespace: kafka-cluster
spec:
  selector:
    strimzi.io/name: cluster-1-kafka
    strimzi.io/component-type: kafka
  ports:
    - name: metrics
      port: 9404
      targetPort: tcp-prometheus
