kafka-cluster/bridge-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bridge-virtualservice
  namespace: kafka-cluster
spec:
  hosts:
    - kafka.local.io
  gateways:
    - bridge-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: my-cluster-bridge-bridge-service.kafka-cluster.svc.cluster.local
            port:
              number: 8080
---
